fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,4 +25,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-poppins), Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
